cabal-version: 2.4
name:          transformers-quantified
version:       0

library
  default-language: Haskell2010
  build-depends:
    , base          >=0 && <5
    , free
    , transformers

  -- plenty of big stuff
  build-depends:
    , Agda
    , darcs
    , hakyll
    , pandoc
    , servant-client
    , servant-server
    , postgrest
    , yesod
